test: Try fixing vertical dashed stroke width on Safari iPhone

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -125,7 +125,7 @@
         --px: 0.09375rem;
         font-size: 0.937135vw;
 
-        @apply 2xl:text-base lg:text-sm lg:[--px:1.5px];
+        @apply 2xl:text-base lg:text-sm lg:[--px:.1071428rem];
     }
 
     * {
